--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@babel/preset-env": "^7.15.4",
     "@babel/runtime": "^7.15.4",
     "babel-plugin-module-resolver": "^4.1.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "mongodb": "^4.1.1",
     "nodemon": "^2.0.12"
   }
 }
