--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "joi": "^17.4.2",
     "mongodb": "^4.1.1",
     "nodemon": "^2.0.12"
   }
